Improve references up to Gelman

--- a/references.bib
+++ b/references.bib
@@ -222,7 +222,7 @@
   pages = {35--59}
 }
 
-@article{betancourt2017robust,
+@misc{betancourt2017robust,
   title = {{Robust Gaussian processes in Stan}},
   author = {Betancourt, Michael},
   year = 2017,
@@ -253,8 +253,7 @@
   title = {{Applied spatial data analysis with R}},
   author = {Bivand, Roger S and Pebesma, Edzer J and G{\'o}mez-Rubio, Virgilio and Pebesma, Edzer Jan},
   year = 2008,
-  publisher = {Springer},
-  volume = 747248717
+  publisher = {Springer}
 }
 
 @article{blangiardo2013spatial,
@@ -263,12 +262,7 @@
   year = 2013,
   journal = {Spatial and Spatio-temporal Epidemiology},
   volume = 4,
-  pages = {33--49},
-  doi = {https://doi.org/10.1016/j.sste.2012.12.001},
-  issn = {1877-5845},
-  url = {https://www.sciencedirect.com/science/article/pii/S1877584512000846},
-  keywords = {Integrated Nested Laplace Approximation, Stochastic Partial Differential Equation approach, Bayesian approach, Area-level data, Point-level data},
-  abstract = {During the last three decades, Bayesian methods have developed greatly in the field of epidemiology. Their main challenge focusses around computation, but the advent of Markov Chain Monte Carlo methods (MCMC) and in particular of the WinBUGS software has opened the doors of Bayesian modelling to the wide research community. However model complexity and database dimension still remain a constraint. Recently the use of Gaussian random fields has become increasingly popular in epidemiology as very often epidemiological data are characterised by a spatial and/or temporal structure which needs to be taken into account in the inferential process. The Integrated Nested Laplace Approximation (INLA) approach has been developed as a computationally efficient alternative to MCMC and the availability of an R package (R-INLA) allows researchers to easily apply this method. In this paper we review the INLA approach and present some applications on spatial and spatio-temporal data.}
+  pages = {33--49}
 }
 
 @book{blangiardo2015spatial,
@@ -290,7 +284,7 @@
 }
 
 @article{bolker2013strategies,
-  title = {{Strategies for fitting nonlinear ecological models in R, AD M odel B uilder, and BUGS}},
+  title = {{Strategies for fitting nonlinear ecological models in R, AD Model Builder, and BUGS}},
   author = {Bolker, Benjamin M and Gardner, Beth and Maunder, Mark and Berg, Casper W and Brooks, Mollie and Comita, Liza and Crone, Elizabeth and Cubaynes, Sarah and Davies, Trevor and de Valpine, Perry and others},
   year = 2013,
   journal = {Methods in Ecology and Evolution},
@@ -314,7 +308,6 @@
   author = {Bosse, Nikos I. and Gruson, Hugo and Cori, Anne and van Leeuwen, Edwin and Funk, Sebastian and Abbott, Sam},
   year = 2022,
   publisher = {arXiv},
-  doi = {10.48550/ARXIV.2205.07090},
   url = {https://arxiv.org/abs/2205.07090},
   copyright = {Creative Commons Attribution 4.0 International},
   keywords = {Methodology (stat.ME), Applications (stat.AP), Computation (stat.CO), FOS: Computer and information sciences, FOS: Computer and information sciences}
@@ -520,7 +513,7 @@
   howpublished = {\url{http://www.coin-or.org/CppAD}}
 }
 
-@article{cramb2018investigation,
+@misc{cramb2018investigation,
   title = {{Investigation of Bayesian spatial models}},
   author = {Cramb, SM and Duncan, EW and Baade, PD and Mengersen, KL},
   year = 2018,
@@ -596,10 +589,7 @@
   journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
   volume = 39,
   number = 1,
-  pages = {1--22},
-  doi = {https://doi.org/10.1111/j.2517-6161.1977.tb01600.x},
-  url = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/j.2517-6161.1977.tb01600.x},
-  keywords = {maximum likelihood, incomplete data, em algorithm, posterior mode}
+  pages = {1--22}
 }
 
 @article{dempster1977maximum,
@@ -634,7 +624,7 @@
 }
 
 @inproceedings{diaz2018openmp,
-  title = {{Openmp 4.5 validation and verification suite for device offload}},
+  title = {{OpenMP 4.5 Validation and Verification Suite for Device Offload}},
   author = {Diaz, Jose Monsalve and Pophale, Swaroop and Hernandez, Oscar and Bernholdt, David E and Chandrasekaran, Sunita},
   year = 2018,
   booktitle = {Evolving OpenMP for Evolving Architectures: 14th International Workshop on OpenMP, IWOMP 2018, Barcelona, Spain, September 26--28, 2018, Proceedings 14},
@@ -739,7 +729,7 @@
   booktitle = {AIDS2022: Strengthening health systems session.}
 }
 
-@article{economist2023triple,
+@misc{economist2023triple,
   title = {{A triple dividend: the health, social and economic gains from financing the HIV response in Africa}},
   author = {{Economist Impact}},
   year = 2023
@@ -756,7 +746,7 @@
   pages = {345--349}
 }
 
-@article{esra2023improved,
+@misc{esra2023improved,
   title = {{Improved indicators for subnational unmet antiretroviral therapy need in the health system: updates to the Naomi model in 2023}},
   author = {Esra, Rachel},
   year = 2023
@@ -809,11 +799,10 @@
   journal = {CMStatistics Presentation}
 }
 
-@techreport{follestad2003modelling,
+@misc{follestad2003modelling,
   title = {{Modelling spatial variation in disease risk using Gaussian Markov random field proxies for Gaussian random fields}},
   author = {Follestad, Turid and Rue, H{\aa}vard},
-  year = 2003,
-  institution = {SIS-2003-305}
+  year = 2003
 }
 
 @article{fournier2012ad,
@@ -918,9 +907,14 @@
 }
 
 @article{gelman2006prior,
+  author = {Andrew Gelman},
   title = {{Prior distributions for variance parameters in hierarchical models (comment on article by Browne and Draper)}},
-  author = {Gelman, Andrew},
-  year = 2006
+  volume = {1},
+  journal = {Bayesian Analysis},
+  number = {3},
+  publisher = {International Society for Bayesian Analysis},
+  pages = {515 -- 534},
+  year = {2006}
 }
 
 @article{gelman2007struggles,
@@ -1563,13 +1557,8 @@
 @misc{measure2012sampling,
   title = {{Sampling and Household Listing Manual: Demographic and Health Surveys Methodology}},
   author = {{DHS}},
-  year = 2012
-}
-
-@misc{measure2012sampling,
-  title = {{Sampling and Household Listing Manual: Demographic and Health Surveys Methodology}},
-  author = {{DHS}},
-  year = 2012
+  year = 2012,
+  url = {https://dhsprogram.com/pubs/pdf/DHSM4/DHS6_Sampling_Manual_Sept2012_DHSM4.pdf}
 }
 
 @article{meng2018statistical,
