Better writing on HIV data sources

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -155,6 +155,7 @@ Chapter \@ref(multi-agyw) focuses on measurement of HIV for AGYW and FSW.
 There are a number of ways to practically implement differentiated HIV treatment and prevention services [@godfrey2022hiv].
 These include geographic and demographic prioritisation [@meyer2018targeting], key population services [@world2022consolidated], and risk screening based on individual-level risk characteristics [@jia2022risk].
 Each approach requires strategic information about HIV disease burden.
+This thesis focuses on using HIV surveillance to inform geographic and demographic prioritisation.
 
 ## HIV surveillance {#surveillance}
 
@@ -194,49 +195,51 @@ HIV diagnosis allows for linkage to care and progression along the HIV treatment
 
 ### Data {#hiv-data}
 
-Measurement of the above HIV indicators requires data.
-Multiple sources of data are used:
+Measuring the above HIV indicators requires data.
+To give the most complete picture of the epidemic, it is important to use multiple sources of data.
+The most prominent categories are:
 
-* **Household surveys** are large, national cross-sectional studies.
-The Demographic and Health Surveys (DHS) Program.
-Population-based HIV Impact Assessments (PHIA).
-Household surveys provide nationally-representative high quality standardised data about HIV.
+* **Household surveys** are large, national, cross-sectional studies.
+The surveys conducted in the most countires are Demographic and Health Surveys [DHS ;@measure2012sampling], which include a wide range of health related questions, and more HIV-specific Population-based HIV Impact Assessment [PHIA; @phia] and AIDS Indicator Surveys (AIS).
+Some countries also implement their own survey series, such as the South Africa Behavioural, Sero-status and Media Impact Survey (SABSSM).
+Household surveys provide high quality standardised data about HIV, typically designed to furnish nationally-representative estimates.
+Both DHS and PHIA surveys collecting demographic, behavioural, and clinical information.
+Additionally, HIV testing is conducted via home-based testing, with results returned immediately, or anonymous dried blood spot testing.
 
 * **Programmatic data** refer to data routinely collected during delivery of health services.
 Examples include data from antenatal care (ANC) HIV testing and ART service delivery.
-Programmatic data are more regularly available than other data sources.
-However, the control that can be exercised over collection of programmatic data is limited.
-As a result, issues of data quality and reliability, as well as bias, are common in working with programmatic data.
+Due to their integration with regular service delivery, programmatic data are available at higher frequency than other data sources.
+However, in comparison with designed studies, less control can be exercised over collection of programmatic data.
+It is common to encounter issues of data quality and reliability, as well as bias, in working with programmatic data.
 
 * **Cohort studies** follow a group of people over time.
 Outcomes may be measured more systematically in a cohort study than in other study designs.
-The data from cohort studies are used to inform otherwise difficult to estimate epidemiological parameters.
-Examples of such parameters include disease progression and mortality rates, transmission dynamics, and treatment outcomes.
-Population-based cohort studies relevant to the SSA setting include Manicaland, Zimbabwe [@gregson2006hiv]; Rakai, Uganda [@grabowski2017hiv].
-
-<!-- Discuss methods for HIV testing -->
+The data from cohort studies have particular use in informing otherwise difficult to estimate epidemiological parameters.
+Such parameters include disease progression and mortality rates, transmission dynamics, and treatment outcomes.
+Examples of population-based cohort studies in SSA include the Manicaland Project Open Cohort Study in Zimbabwe [@gregson2006hiv], the Rakai Community Cohort Study in Uganda [@grabowski2017hiv], and the Karonga Demographic Surveillance Site in Malawi [@crampin2012profile].
 
 ### Challenges
 
-Obtaining reliable, timely estimates at an appropriate spatial resolution is challenging.
+Obtaining reliable, timely estimates of the HIV indicators at an appropriate spatial resolution using the available data sources is challenging.
 The most significant difficulties faced are:
 
 1. **Data sparsity**:
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, or population of interest.
 For example, in many countries the last conducted household survey is several years out of date.
+Furthermore, household surveys are typically powered to have sufficient sample size to be representative at a national-level.
+As a result, data for subpopulations are often sparse.
 
 2. **Missing data**:
 The sampling frame of a survey may not correspond to the target population.
 For example, many KPs are difficult to reach, and may be omitted from sampling frames.
 Individuals included on the sampling frame may choose not to respond.
-All surveys are subject to sampling error, as only a subset of the target population are sampled.
 Each of these issues can be characterised as being problems of missing data.
-I characterise missing data as referring to the shortfalls of any given study, and data sparsity as referring to limited availability of studies. 
 
 3. **Response and measurement biases**:
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
-When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
+When available, biomarker data can be used to overcome under-reporting of HIV status, but still may be subject to measurement errors.
+Biases in behavioural data can be more difficult to disentangle.
 
 4. **Denominators and demography**:
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
