--- a/references.bib
+++ b/references.bib
@@ -1556,7 +1556,7 @@
 
 @misc{measure2012sampling,
   title = {{Sampling and Household Listing Manual: Demographic and Health Surveys Methodology}},
-  author = {{DHS}},
+  author = {{USAID}},
   year = 2012,
   url = {https://dhsprogram.com/pubs/pdf/DHSM4/DHS6_Sampling_Manual_Sept2012_DHSM4.pdf}
 }
@@ -1860,9 +1860,10 @@
 
 @misc{phia,
   title = {{Population-based HIV impact assessment: guiding the global HIV response}},
-  author = {{PHIA project}},
+  author = {{ICAP}},
   url = {https://phia.icap.columbia.edu},
-  note = {Accessed 17/05/2022}
+  note = {Accessed 13/12/2023},
+  year = 2023
 }
 
 @article{pisani2003hiv,
@@ -2889,4 +2890,15 @@
   year = {2014},
   howpublished = {CDC},
   url = {http://www.cdc.gov/hiv/pdf/dhap_continuum.pdf}
+}
+
+@article{crampin2012profile,
+  title = {{Profile: the Karonga health and demographic surveillance system}},
+  author = {Crampin, Amelia C and Dube, Albert and Mboma, Sebastian and Price, Alison and Chihana, Menard and Jahn, Andreas and Baschieri, Angela and Molesworth, Anna and Mwaiyeghele, Elnaeus and Branson, Keith and others},
+  journal = {{International Journal of Epidemiology}},
+  volume = {41},
+  number = {3},
+  pages = {676 -- 685},
+  year = {2012},
+  publisher = {Oxford University Press}
 }
