Better connect challenges to work done in thesis

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -221,19 +221,19 @@ Examples of population-based cohort studies in SSA include the Manicaland Projec
 ### Challenges
 
 Obtaining reliable, timely estimates of the HIV indicators at an appropriate spatial resolution using the available data sources is challenging.
-The most significant difficulties faced are:
+The most significant difficulties faced are enumerated below, providing important context for the work in this thesis:
 
 1. **Data sparsity**:
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, or population of interest.
 For example, in many countries the last conducted household survey is several years out of date.
-Furthermore, household surveys are typically powered to have sufficient sample size to be representative at a national-level.
-As a result, data for subpopulations are often sparse.
+Furthermore, the sample sizes in household surveys are typically designed to be representative at a national-level.
+As a result, data for subpopulations are usually sparse.
 
 2. **Missing data**:
 The sampling frame of a survey may not correspond to the target population.
-For example, many KPs are difficult to reach, and may be omitted from sampling frames.
-Individuals included on the sampling frame may choose not to respond.
+For example, some KPs are difficult to reach, and may be omitted from sampling frames.
+Additionally, individuals included on the sampling frame may choose not to respond.
 Each of these issues can be characterised as being problems of missing data.
 
 3. **Response and measurement biases**:
@@ -243,12 +243,14 @@ Biases in behavioural data can be more difficult to disentangle.
 
 4. **Denominators and demography**:
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
-Accurately estimating population denominators is itself a challenging task [@tatem2017worldpop].
+For example, HIV prevalence is a proportion of the population, and HIV incidence is a rate per person-years at risk.
+Accurately estimating population denominators over space, time, and demographies is itself a challenging task [@tatem2017worldpop].
 Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
 
 5. **Inconsistent data collection and reporting**:
-The types of data that are collected might vary across space and time.
-Reporting protocols or definitions can also change.
+The sources of data that are collected might vary across space and time.
+Additionally, reporting protocols or definitions for the same data source can also change.
+Though household surveys tend to be more consistent than programmatic data, the questions included and design of the surveys do change.
 
 6. **Reliance on epidemiological parameters**:
 Indicators rely on estimates of epidemiological parameters such as rates of disease progression.
@@ -258,16 +260,21 @@ Further, they are typically applied coarsely, and without proper accounting for 
 ### Statistical approaches
 
 The challenges above make direct interpretation of the data often misleading or impossible.
-Careful statistical modelling is required to overcome these limitations as best as possible.
+Careful statistical modelling is required to mitigate these limitations as effectively as possible.
+The most important statistical approaches for estimating HIV indicators used in this thesis are:
 
 1. **Borrowing information**:
 When little direct data are available, data judged to be indirectly related can be used to help improve estimation.
 For example, if limited data are available for individuals of a certain age, it is likely reasonable to make use of data for individuals of a similar age.
 As well as over age groups, information can be borrowed between and within countries, and across times.
+Chapter \@ref(beyond-borders) discusses models for borrowing information over space.
+These models, along with others for borrowing information in other dimensions, are applied in Chapters \@ref(multi-agyw) and \@ref(naomi-aghq).
 
 2. **Evidence synthesis**:
 Multiple sources of evidence can be combined to overcome the limitations of any one data source.
 For example, infrequently run household surveys can be complemented by more up-to-date programmatic data.
+Chapter \@ref(naomi-aghq) develops methods suitable for the complex statistical models required to integrate data sources.
+Multiple data sources are used in Chapter \@ref(multi-agyw) to overcome the limitations of household surveys for measuring KP population sizes.
 
 3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
@@ -275,4 +282,5 @@ Ensuring the quality of any data used in the estimation process is essential.
 
 4. **Uncertainty quantification**:
 Conclusions drawn by synthesising multiple incomplete data sources are unlikely to be firm and unanimous.
-It is therefore particularly that the uncertainties inherent to any statistical analysis are accurately and transparently presented.
+It is therefore especially important that the uncertainties inherent to any statistical analysis are accurately and transparently presented.
+The Bayesian statistical paradigm introduced in Chapter \@ref(bayes-st) and used throughout this thesis is particularly well suited to handling of uncertainty.
